@@ -13,7 +13,9 @@ my $cv = AnyEvent->condvar;
 my $input = Message::Passing::Input::AMQP->new(
     exchange_name => "M::P::AMQP_header_test",
     exchange_type => 'headers',
+    exchange_auto_delete => 1,
     queue_name => "M::P::AMQP_header_test",
+    queue_auto_delete => 1,
     bind_arguments => {
         header1   => 'foo',
         header2   => 'bar',
@@ -37,6 +39,7 @@ my $output = Message::Passing::Filter::Encoder::JSON->new(
         password => 'guest',
         exchange_name => "M::P::AMQP_header_test",
         exchange_type => 'headers',
+        exchange_auto_delete => 1,
         header_cb => sub {
             my $message = shift;
             my $header = {
