@@ -1,6 +1,7 @@
   - Add support for headers exchanges
   - Add support for making exchanges auto-delete
   - Remove queue_type attribute as there is no such thing in AMQP
+  - Auto-delete all exchanges and queues in author-only tests
 
 0.006  2015-06-26 17:54:00+01:00 Europe/London
   - Fix license to be LGPL 2.1
